# WSoC13-SpaceCombat-Game

./: CMakeLists.txt  README.md  WSoC.pro  WSoC_windows.pro  bar.cpp  bar.h  bullet.cpp  bullet.h  collision.cpp  collision.h  drawable.cpp  drawable.h  drawablevector.cpp  drawablevector.h  emath.cpp  emath.h  enemy.cpp  enemy.h  engine.cpp  engine.h  estring.cpp  estring.h  ezolib.h  game.cpp  game.h  game_object.cpp  game_object.h  game_state.cpp  game_state.h  gameplay_state.cpp  gameplay_state.h  gun.cpp  gun.h  ingamemenustate.cpp  ingamemenustate.h  level.cpp  level.h  logger.cpp  logger.h  main.cpp  (+24 more)
grasyf/unused/: animSprite.cpp  animSprite.h  bounding_box.cpp  bounding_box.h  console.cpp  console.h  physics_manager.cpp  physics_manager.h
levels/: 1.txt  2.txt
resources/: images.txt  resources.txt  sounds.txt  textures.txt
windows_release_v1.0.0/resources/: resources.txt  sounds.txt
windows_release_v1.0.1/: readme.txt
windows_release_v1.0.1/resources/: images.txt  textures.txt
